--- a/Frontend Compts/Checkbox cards/sass/main.scss
+++ b/Frontend Compts/Checkbox cards/sass/main.scss
@@ -77,6 +77,7 @@ body {
     border: 2px solid #b5bfd9;
     background-color: #fff;
     border-radius: 1rem;
+    overflow: hidden;
 
     cursor: pointer;
     display: flex;
@@ -94,10 +95,14 @@ body {
       transition: all 0.2s ease-in-out;
     }
 
-    span {
+    .text {
       font-size: 1.6rem;
       color: #9c9c9c;
       transition: all 0.2s ease-in-out;
+
+      //fixes text overflowing issue
+      height: auto;
+      word-break: break-all;
     }
   }
 
